updated with revisions

--- a/paper/firstwords.tex
+++ b/paper/firstwords.tex
@@ -82,7 +82,7 @@ We recruited 1000 parents from Amazon Mechanical Turk (Mturk) to complete an in-
 
 This survey was an extended version of the Museum survey, allowing for input for multiple children, and asking the respondent to list their highest level of education, child's birth order, sex, first word (excluding ``mama'' and ``dada''), word type, addressee of the first word, age at time of the word (0--24+ months), current age (0--18+ years), and both the languages of the first word and typically spoken at home.
 
-Data were handled as in Dataset 1. Due to the larger sample size, more phonological and morphological variations appeared in parents' reports of children's productions. A final standardized form was selected, and the various original first word forms were recoded as that standardized form. For example, ``Dog dog,'' ``Doggy,'' ``Doggie,'' and ``Dogie'' were all coded as ``Dog.'' We occasionally relied on the parent's description of the situation in this coding process.
+Data were handled as in Dataset 1. Due to the larger sample size, more phonological and morphological variations appeared in parents' reports of children's productions. A final standardized form was selected, and the various original first word forms were recoded as that standardized form. For example, ``Dog dog,'' ``Doggy,'' ``Doggie,'' and ``Dogie'' were all coded as ``Dog.'' When necessary, we relied on the parent's description of the situation in this coding process.
 
 %%%SURVEY 3
 \subsection{Dataset 3: Psycholinguists }
@@ -100,7 +100,7 @@ Questions included on the survey were: The approximate phonological form of the 
 
 \subsubsection{Participants}
 
-At the time of our analysis, the Wordbank database contained 949 unique CDI Words and Gestures administrations. From these, we selected the 76 children whose parents reported that they produced exactly one word (31 female, 45 male, M age = 10.63 mo., median = 11 mo.). Caregiver education levels were fairly diverse (Some high school = 4; High school = 24; Some college = 21; College = 17; Some graduate school = 1; Graduate school = 9). 
+At the time of our analysis, the Wordbank database contained 8889 unique CDI Words and Gestures administrations. From these, we selected the 76 English-speaking children whose parents reported that they produced exactly one word (31 female, 45 male, M age = 10.63 mo., median = 11 mo.). Caregiver education levels were fairly diverse (Some high school = 4; High school = 24; Some college = 21; College = 17; Some graduate school = 1; Graduate school = 9). 
 
 \subsubsection{Data preparation}
 
@@ -112,18 +112,18 @@ As responses were taken directly from the CDI, no data preparation was necessary
 \centering
 \begin{tabular}{cccc}
 \hline
-{\bf Museum} & {\bf MTurk} & {\bf Psycholinguists} & {\bf Wordbank} \\ 
+{\bf MTurk} & {\bf Museum} & {\bf Psycholinguists} & {\bf Wordbank} \\ 
 \hline
-\textbf{Ball} & \textbf{Dog} & Up & Baa Baa \\ 
-\textbf{Hi} & No & More & Uh--Oh \\
-\textbf{Dog} & \textbf{Ball} & \textbf{Hi} & Yum Yum \\ 
-Uh--Oh & Bottle & \textbf{Cat} & \textbf{Woof Woof} \\ 
-Duck & \textbf{Hi} & \textbf{Bye} & \textbf{Hi} \\
-Car & \textbf{Bye} &  & Vroom \\
-No & Kitty &  & This \\
-\textbf{Cat} & Baba &  & Meow \\
-\textbf{Bye} & \textbf{Cat} &  & Bottle \\
-Up, More & Milk &  & \textbf{Ball} \\
+\textbf{Dog} & \textbf{Ball} & Up & Baa Baa \\ 
+No & \textbf{Hi} & More & Uh--Oh \\
+\textbf{Ball} & \textbf{Dog}& \textbf{Hi} & Yum Yum \\ 
+Bottle & Uh--Oh& \textbf{Cat} & \textbf{Woof Woof} \\ 
+\textbf{Hi} & Duck  & \textbf{Bye} & \textbf{Hi} \\
+\textbf{Bye} & Car &  & Vroom \\
+Kitty & No &  & This \\
+Baba & \textbf{Cat} &  & Meow \\
+\textbf{Cat} & \textbf{Bye}&  & Bottle \\
+Milk & Up, More &  & \textbf{Ball} \\
 \hline 
 \end{tabular}
 \caption{\label{tab:top10} Top ten first words (excluding ``mama'' and ``dada'') from each of the four datasets we examined. Words repeated across more than 2 datasets are bolded. Included are only words with more than 1 instance.}
@@ -141,10 +141,9 @@ Below we report three primary analyses. Analysis 1 examines the age of first pro
 Despite evidence for very early word comprehension \cite{tincoff2012,bergelson2012}, conventional wisdom holds that the first word emerges around 12 months. However, a child's first word is almost exclusively heard by a parent or other caretaker. Is this reported lag between comprehension and production real or apparent? 
 
 
-
 %FIGURE 1
 \begin{figure}[tb]
-\center{\includegraphics[width=.9\linewidth]{figures/agedata_4sets.pdf}}
+\center{\includegraphics[width=.9\linewidth]{figures/Figure1.pdf}}
 \caption{\label{fig:cdfs} Cumulative probability of a child having produced her first word across development. In all datasets, more than 75\% percent of children had produced their first word by their first birthday and more than half had produced their first word by 10 months. Shaded regions show 95\% confidence intervals computed by non-parametric bootstrap.}
 \vspace{-1.4em}
 \end{figure}
@@ -157,7 +156,7 @@ Data from the MTurk survey showed a broader distribution of ages, perhaps due to
 
 Finally, the Psycholinguist dataset shows a relatively later and steeper onset of word production than the other three (though it still reaches 75\% around 11 months). Given the high level of education of the respondents, it is likely that these children would have large early vocabularies \cite<e.g.>[et seq.]{hart1995}. On the other hand, the majority of these respondents recorded their child's first word at the time of production, decreasing concerns about retrospective report. Additionally, these respondents had training in psycholinguistics and were more likely to apply a more stringent standard (we shared our definition of a first word with respondents in the survey instructions). Thus we view the lack of very early respondents as prima facie evidence that first words before 9 months are rarer than our other surveys might lead us to believe.
 
-In sum, we see some evidence for over-optimism (estimating first words earlier than we might expect) in a number of our datasets. Nevertheless, there was no evidence for retrospective reporting biases in our largest dataset (MTurk). A plausible account of this pattern is that first words---whether detected optimistically or realistically---are a memorable event whose date and context are recalled well. In addition, despite differences in the tails, there was a striking convergence between datasets in suggesting that most children in our sample produced a first word prior to their first birthday. 
+In sum, we see some evidence for over-optimism (estimating first words earlier than we might expect) in a number of our datasets. It must be noted that, as our surveys were designed exclusively to ask about a child's first word, parents of later producers who had not spoken a first word yet may have been unwilling to take the survey, potentially skewing the age of production earlier. However, across the Museum, MTurk, and Psycholinguist datasets, more than 50% of the children were currently older than 2 years, meaning that later-producers are very likely included in these datasets. Additionally, we saw no evidence of retrospective reporting biases. A plausible account of this pattern is that first words---whether detected optimistically or realistically---are a memorable event whose date and context are recalled well. In addition, despite differences in the tails, there was a striking convergence between datasets in suggesting that most children in our sample produced a first word prior to their first birthday. 
 
 \subsection{Analysis 2: Independence of Age and First Word}
 
@@ -171,9 +170,9 @@ Figure~\ref{fig:cdi_cats} shows the frequencies of the CDI categories split by a
 %CDI cats
 \begin{figure*}[t]
 \begin{center}
-\includegraphics[width = .9\textwidth]{figures/cdicats_4sets.pdf}
+\includegraphics[width = .9\textwidth]{figures/Figure2.pdf}
 \end{center}
-\caption{Proportion of children's first words falling into each CDI category. The datasets showed a high degree of consistency, with most first words referring to animals or games and routines. These distributions were highly consistent between older and younger children, suggesting that first words are driven by linguistic rather than conceptual factors.}
+\caption{Proportion of children's first words falling into each CDI category. The datasets showed a high degree of consistency, with most first words referring to animals or games and routines. These distributions were highly consistent between older and younger children, suggesting that first words are driven by linguistic rather than conceptual factors. The dashed line shows the baseline distribution of CDI categories.}
 \label{fig:cdi_cats}
 \vspace{-1em}
 \end{figure*}
@@ -232,7 +231,7 @@ Across datasets, input frequency and phonetic complexity consistently predicted 
 
 What can children's first words reveal about their conceptual and linguistic development? Using parent report data, we presented three analyses, touching on the timing of productive language emergence, the distribution of conceptual categories across developmentally early and late first words, and factors that play a role in predicting which words are produced first. More than three quarters of children produced a first word prior to their first birthday, but the particular concepts these words named did not vary across age. Instead, two non-conceptual factors---input frequency and phonetic complexity---predicted the number of children who produced a particular word first.
 
-A child's first word is a highly salient moment whose memorability to caregivers also makes it ideally suited for use in parent-report measures. Nonetheless, even when analyzed at this scale, parent report is limited by observer bias. Although we found no evidence of retrospective biases in parents of older children over-reporting early first words, we must remain aware that there are potential issues with memory recall or other parental biases, as in any self-report measure. We dealt with these issues in several ways, including by seeking converging evidence across multiple, distinct datasets and by testing explicitly for retrospective biases. Nevertheless, the possibility of bias is present, and future studies should consider the possibility of prospective report or dense recording techniques to extend and validate our findings. 
+A child's first word is a highly salient moment whose memorability to caregivers also makes it ideally suited for use in parent-report measures. Nonetheless, even when analyzed at this scale, parent report is always limited by observer bias. Although we found no evidence of retrospective biases in parents of older children over-reporting early first words, we must remain aware that there are potential issues with memory recall or other parental biases, as in any self-report measure. We dealt with these issues in several ways, including by seeking converging evidence across multiple, distinct datasets and by testing explicitly for retrospective biases. Nevertheless, the possibility of bias is present, and future studies should consider the possibility of prospective report or dense recording techniques to extend and validate our findings. 
 
 We began by asking about the lag between comprehension and production in early language. One possible explanation for this lag is that there is a period during early infancy in which word knowledge consists of associations between auditory and visual stimuli and so there is no drive to communicate through production. In contrast to this hypothesis, our data suggest that many children are striving to communicate even quite early on. Consistent with other studies of early vocabulary \cite{tardif2007}, the productions that parents reported also included functional and communicative items---``hi,'' ``more,'' and ``no''---as well as common nouns. In sum, our work suggests that studying the very first emergence of productive speech is a rich method for adding to our understanding of language development.
 
